tests/core/shadowing_fail.ln
// EXPECT: [E013]
// Test: Shadowing in the *same* scope should fail

proc main() i32 {
    var x = 10
    var x = 20  // error: redeclaration
    return 0
}
